--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "compression": "^1.8.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "qr-code-styling": "^1.9.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
